[package]
name = "programmer-news"
version = "0.1.0"
authors = ["Maxwell <m4xw3llx@outlook.com>"]
edition = "2018"

[dependencies]
hyper = "0.13"
hyper-tls = "0.4.1"
tokio = { version = "0.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
bytes = "0.5"